--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "flatpickr",
-  "version": "4.6.13",
+  "name": "@hoektoe/flatpickr",
+  "version": "4.6.17",
   "description": "A lightweight, powerful javascript datetime picker",
   "scripts": {
     "build": "run-s build:pre build:build build:esm build:types build:post",
